--- a/front-end/poo/package.json
+++ b/front-end/poo/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14",
+    "@types/sweetalert": "^2.0.4",
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
+    "sweetalert": "^2.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
